[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_policy_mint"
version = "0.1.0"
description = "Standalone MINT policy plugin for LeRobot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lerobot==0.4.3",
    "transformers @ git+https://github.com/huggingface/transformers.git@fix/lerobot_openpi", 
    "scipy>=1.10.1,<1.15"
]

[tool.setuptools.packages.find]
where = ["src"]